<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/facebook"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_110sdp" />

    <ImageView
        android:layout_toEndOf="@+id/imageView"
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/instagram"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
         />

    <View
        android:id="@+id/view"
        android:layout_below="@+id/imageView2"
        android:layout_width="match_parent"
        android:background="#D8D8D8"
        android:layout_marginTop="15pt"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_height="2dp"/>
    <ImageView
        android:id="@+id/mArtGallery"
        android:layout_below="@+id/view"
        android:layout_marginTop="@dimen/_23sdp"
        android:layout_width="match_parent"
        android:src="@drawable/ic_art_gallery_center2"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:text="@string/about"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_below="@+id/mArtGallery"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvAffiliations"
        android:layout_width="wrap_content"
        android:text="@string/affiliattions."
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_below="@+id/mArtGallery"
        android:layout_toEndOf="@+id/tvAbout"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvTeam"
        android:layout_width="wrap_content"
        android:text="@string/team"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_below="@+id/tvAbout"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvDisclaimer"
        android:layout_width="wrap_content"
        android:text="@string/disclaimers"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_75sdp"
        android:layout_below="@+id/tvAffiliations"
        android:layout_toEndOf="@+id/tvTeam"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvReach"
        android:layout_width="wrap_content"
        android:text="@string/reach"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_below="@+id/tvTeam"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvPrivacy"
        android:layout_width="wrap_content"
        android:text="@string/privacy"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_below="@+id/tvDisclaimer"
        android:layout_toEndOf="@+id/tvReach"
        android:layout_height="wrap_content"/>
    <View
        android:id="@+id/view2"
        android:layout_below="@+id/tvReach"
        android:layout_width="match_parent"
        android:background="#D8D8D8"
        android:layout_marginTop="15pt"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_height="2dp"/>
    <ImageView
        android:id="@+id/imageView3"
        android:layout_below="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_invalid_name"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_80sdp" />
    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:text="@string/content"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:layout_below="@+id/view2"
        android:layout_toEndOf="@+id/imageView3"
        android:layout_height="wrap_content"/>

</RelativeLayout>