<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FirstActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/twenty"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/ic_art_gallery_center_" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_220sdp"
            android:layout_marginTop="@dimen/seven"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_first_group_301_copy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/lorem"
            android:textSize="@dimen/eighteen" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_22sdp"
            android:gravity="center"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:text="@string/elit"
            android:textSize="@dimen/twentys" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:background="@drawable/button_bg"
                android:drawableStart="@drawable/ic_group_3_copy"
                android:textAllCaps="false"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/twentyEight"
                android:text="register"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tvCollector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/collector"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/twentyTwo" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:src="@drawable/ic_group_3_copy_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/track_my_application"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/twentyTwo"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <include
            layout="@layout/second_item_layout"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_50sdp" />
    </LinearLayout>


</androidx.core.widget.NestedScrollView>